--- a/mines/index.html
+++ b/mines/index.html
@@ -116,7 +116,7 @@
         <div class="flex items-center space-x-8">
             <h1 class="text-4xl font-semibold text-white" style="font-family: 'Poppins', sans-serif;">Mines</h1>
             <nav class="flex space-x-6">
-                <a href="#" class="text-gray-300 hover:text-white transition-colors duration-200">Home</a>
+                <a href="/index.html" class="text-gray-300 hover:text-white transition-colors duration-200">Home</a>
                 <a href="#" class="text-gray-300 hover:text-white transition-colors duration-200">About</a>
             </nav>
         </div>
