--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 
                 <!-- Mines Game Card -->
-                <a href="/mines.html" class="glow-border rounded-lg block transform hover:-translate-y-2 transition-transform duration-300 ease-in-out overflow-hidden">
+                <a href="/carlitos.games/mines.html" class="glow-border rounded-lg block transform hover:-translate-y-2 transition-transform duration-300 ease-in-out overflow-hidden">
                     <img src="https://i.postimg.cc/fb7MZ4fw/Gemini-Generated-Image-mzopzvmzopzvmzop.png" alt="Mines Game Thumbnail" class="w-full h-full object-cover">
                 </a>
 
                 <!-- Plinko Game Card -->
-                <a href="/plinko.html" class="glow-border rounded-lg block transform hover:-translate-y-2 transition-transform duration-300 ease-in-out relative overflow-hidden">
+                <a href="/carlitos.games/plinko.html" class="glow-border rounded-lg block transform hover:-translate-y-2 transition-transform duration-300 ease-in-out relative overflow-hidden">
                     <img src="https://i.postimg.cc/8C7LnHRB/Gemini-Generated-Image-m7wi5xm7wi5xm7wi.png" alt="Plinko Game Thumbnail" class="w-full h-full object-cover">
                     <div class="beta-tag">Beta</div>
                 </a>
